--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 mt-2">
   <table class="table table-bordered text-center">
     <thead class="thead">
-    <tr>
+    <tr class="bg-title-table">
       <th scope="col">No</th>
       <th scope="col">Username</th>
       <th scope="col">Full Name</th>
