--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -91,7 +91,9 @@
               <a routerLink="list-user">List User</a>
             </li>
             <li class="list-group-item">Admin Function 2</li>
-            <li class="list-group-item">Admin Function 3</li>
+            <li class="list-group-item">
+              <a routerLink="testManage">List Test</a>
+            </li>
             <li class="list-group-item">Admin Function 4</li>
           </ul>
         </ng-container>
@@ -102,7 +104,7 @@
             <li class="list-group-item">Member function 3</li>
             <li class="list-group-item">Member function 4</li>
           </ul>
-          
+
           <!-- Phần dưới này hiển thị phần chọn môn để làm bài test -->
           <!-- <div class="row d-flex justify-content-md-around mb-5">
             <div class="frames-img col-md-5 item-subject p-0">
@@ -136,8 +138,8 @@
             <pre>Please create new account or use your Gmail or Facebook</pre>
             <hr>
             <h3>Let's go !</h3>
-            <img src="https://s31450.pcdn.co/wp-content/uploads/2015/09/iStock_exam.150922.jpg" alt="cover.jpg">      
-          </div>  
+            <img src="https://s31450.pcdn.co/wp-content/uploads/2015/09/iStock_exam.150922.jpg" alt="cover.jpg">
+          </div>
         </ng-container>
       </ng-container>
       <router-outlet></router-outlet>
