--- a/project/FE/src/app/test/add-test/add-test.component.html
+++ b/project/FE/src/app/test/add-test/add-test.component.html
@@ -1,10 +1,9 @@
 <div class="container-fluid font">
   <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
+    <div class="col-md-12">
       <div class="col-md-10">
         <div class="row">
-          <div class="col-md-12 message-bg mt-4">
+          <div class="col-md-12 mt-4 text-center">
             <span id="message" *ngIf="message" class="d-flex align-items-center message-bg">{{message}}</span>
           </div>
         </div>
