--- a/project/FE/src/app/test/test-list/test-list.component.html
+++ b/project/FE/src/app/test/test-list/test-list.component.html
@@ -1,109 +1,89 @@
-<div class="container-fluid font">
-  <!--    header-->
-  <div class="row header">
-    <div class="col-md-12 d-flex align-items-center p-1">
-      <span>List test</span>
-    </div>
-  </div>
-
-  <!--thanh chọn bảng-->
-  <div class="row">
-    <div class="col-md-2 pt-3 pb-3 pl-1">
-      <div class="dropdown">
-        <i class="fa fa-sign-in" aria-hidden="true"></i>
-        List name:
-        <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenu2"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span>List test</span>
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <button class="dropdown-item" type="button">List test</button>
-          <button class="dropdown-item" type="button">List member</button>
-          <button class="dropdown-item" type="button">Question bank</button>
-          <button class="dropdown-item" type="button">TOP</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-10">
-      <div class="row">
-        <div class="col-md-12 message-bg mt-4">
-          <span id="message" *ngIf="message" class="d-flex align-items-center">{{message}}</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!--            bảng -->
-  <div class="row">
-    <div class="col-md-12 p-0 m-0">
-      <table class="table table-bordered table-responsive-md text-center">
-        <thead class="header">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">TestCode</th>
-          <th scope="col">NameTest</th>
-          <th scope="col">Subject</th>
-          <th scope="col">Grade</th>
-          <th scope="col">Delete</th>
-          <th scope="col">View</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let test of listTest">
-          <th scope="col">{{test.testId}}</th>
-          <td>{{test.testCode}}</td>
-          <td>{{test.testName}}</td>
-          <td>{{test.subjectName}}</td>
-          <td>{{test.grade}}</td>
-          <td>
-            <label>
-              <input (click)="chooseToDelete(test.testId)" type="checkbox">
-            </label>
-          </td>
-          <td>
-            <a [routerLink]="['']" class="text-decoration-none">View</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <!--   nút thêm xóa -->
-  <div class="row">
-    <div class="col-md-6"></div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <button id="import" class="btn import">
-            <input type="file" accept=".txt" (change)="selectFile($event)" class="custom-file-input" for="import">
-          </button>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <button id="delete" class="btn btn-outline-info" data-toggle="modal"
-                  data-target="#exampleModal">
-            <i class="fa fa-trash-o" aria-hidden="true"></i>
-            Delete item
-          </button>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a [routerLink]="['../addTest']"
-             class="btn btn-outline-info">
-            <i class="fa fa-puzzle-piece" aria-hidden="true"></i>
-            Add new
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <button class="btn btn-outline-info">
-            <i class="fa fa-times" aria-hidden="true"></i>
-            Close
-          </button>
-        </div>
+<div class="row">
+  <div class="col-md-7 col-sm-5">
+    <div class="row">
+      <div class="col-md-12 mt-4 text-center">
+        <span id="message" *ngIf="message" class="d-flex align-items-center message-bg">{{message}}</span>
       </div>
     </div>
   </div>
 </div>
 
+<!--            bảng -->
+<div class="row">
+  <div class="col-md-12 p-0 m-0">
+    <table class="table table-bordered table-responsive-md text-center">
+      <thead class="header">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">TestCode</th>
+        <th scope="col">NameTest</th>
+        <th scope="col">Subject</th>
+        <th scope="col">Grade</th>
+        <th scope="col">Delete</th>
+        <th scope="col">View</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let test of listTest | paginate: {itemsPerPage: 5, currentPage: p}; let i = index">
+        <th scope="col">{{test.testId}}</th>
+        <td>{{test.testCode}}</td>
+        <td>{{test.testName}}</td>
+        <td>{{test.subjectName}}</td>
+        <td>{{test.grade}}</td>
+        <td>
+          <label>
+            <input (click)="chooseToDelete(test.testId)" type="checkbox">
+          </label>
+        </td>
+        <td>
+          <a [routerLink]="['']" class="text-decoration-none">View</a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-10 text-center">
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
+</div>
+
+<!--   nút thêm xóa -->
+<div class="row">
+  <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-3 col-sm-6">
+        <button id="import" class="btn import">
+          <input type="file" accept=".txt" (change)="selectFile($event)" class="custom-file-input" for="import">
+        </button>
+      </div>
+      <div class="col-md-3">
+      </div>
+
+      <div class="col-md-2 col-sm-6">
+        <button id="delete" class="btn btn-outline-info" data-toggle="modal"
+                data-target="#exampleModal">
+          <i class="fa fa-trash-o" aria-hidden="true"></i>
+          Delete
+        </button>
+      </div>
+      <div class="col-md-2 col-sm-6">
+        <a [routerLink]="['../addTest']"
+           class="btn btn-outline-info">
+          Add new
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-6">
+        <button class="btn btn-outline-info">
+          <i class="fa fa-times" aria-hidden="true"></i>
+          Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 <!--code custom confirm-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
