--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -62,7 +62,7 @@
         <ng-container *ngSwitchCase="'admin'">
           <ul class="list-group list-group-horizontal d-flex justify-content-center">
             <li class="list-group-item list-group-item-info">
-              <a routerLink="list-user">List User</a>
+              <a routerLink="/list/user">Manager</a>
             </li>
             <li class="list-group-item">
               <a [routerLink]="'list-question-bank'">List Question</a>
