--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -66,7 +66,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            <a class="text-white" [routerLink]="'list-user'">
+            <a class="text-white" [routerLink]="'/list/user'">
               Close
             </a>
           </button>
