phuong - fix array answer and layout

--- a/project/FE/src/app/test/get-test/get-test.component.html
+++ b/project/FE/src/app/test/get-test/get-test.component.html
@@ -34,10 +34,8 @@
         </tr>
       </table>
     </div>
-    <input class="btn btn-sm  rounded" type="submit" value="Submit" onclick="return confirm('You are finish test ?')">
+    <input class="btn btn-outline-info  rounded" type="submit" value="Submit" onclick="return confirm('You are finish test ?')">
   </form>
   <div>
   </div>
-  {{ examForm.value | json}}
-
 </div>
