--- a/project/FE/src/app/list/list.component.html
+++ b/project/FE/src/app/list/list.component.html
@@ -24,7 +24,9 @@
             <a (click)="menuChange('Top Grade')" class="dropdown-item" href="#">Top Grade</a>
           </div>
         </div>
+        <div class="row card-body justify-content-center">
         <router-outlet></router-outlet>
+        </div>
       </div>
     </div>
   </div>
