--- a/project/FE/src/app/default-page/default-page.component.html
+++ b/project/FE/src/app/default-page/default-page.component.html
@@ -1,24 +1,89 @@
-<div class="row d-flex justify-content-md-around mt-3 mb-5">
-  <div class="frames-img col-md-5 item-subject p-0">
-    <img class="img-card"
-         src="https://www.clipartmax.com/png/middle/217-2175673_facebook-messenger-logo-vector-facebook-messenger.png">
-    <p class="m-3">Math</p>
+<!--Grade A-->
+<div id="gradeA" class="row d-flex justify-content-md-around mt-3 mb-5">
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/math%20image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Math</p>
+    </div>
   </div>
-  <div class="frames-img col-md-5 item-subject p-0">
-    <img class="img-card"
-         src="https://www.clipartmax.com/png/middle/217-2175673_facebook-messenger-logo-vector-facebook-messenger.png">
-    <p class="m-3">Math</p>
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/physics-image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Physics</p>
+    </div>
   </div>
 </div>
 <div class="row d-flex justify-content-md-around mb-5">
-  <div class="frames-img col-md-5 item-subject p-0">
-    <img class="img-card"
-         src="https://www.clipartmax.com/png/middle/217-2175673_facebook-messenger-logo-vector-facebook-messenger.png">
-    <p class="m-3">Math</p>
-  </div>
-  <div class="frames-img col-md-5 item-subject p-0">
-    <img class="img-card"
-         src="https://www.clipartmax.com/png/middle/217-2175673_facebook-messenger-logo-vector-facebook-messenger.png">
-    <p class="m-3">Math</p>
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/chemistry_2018_640.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Chemistry</p>
+    </div>
   </div>
 </div>
+<!--Grade B-->
+<div id="gradeB" class="row d-flex justify-content-md-around mt-3 mb-5">
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/math%20image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Math</p>
+    </div>
+  </div>
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/biology-image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Biology</p>
+    </div>
+  </div>
+</div>
+<div class="row d-flex justify-content-md-around mb-5">
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/chemistry_2018_640.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Chemistry</p>
+    </div>
+  </div>
+</div>
+<!--Grade D-->
+<div id="gradeD" class="row d-flex justify-content-md-around mt-3 mb-5">
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/math%20image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Math</p>
+    </div>
+  </div>
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/english-image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">English</p>
+    </div>
+  </div>
+</div>
+<div class="row d-flex justify-content-md-around mb-5">
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/literature-image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">Literature</p>
+    </div>
+  </div>
+</div>
+<!--IQ-->
+<div id="iqTest" class="row d-flex justify-content-md-around mb-5">
+  <div class="card col-md-5 item-subject p-0">
+    <img class="card-img-top"
+         src="assets/image/iq-image.jpg">
+    <div class="card-body">
+      <p class="text-center card-title m-3">IQ Test</p>
+    </div>
+  </div>
+</div>
+
