--- a/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
+++ b/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
@@ -1,6 +1,4 @@
-<div class="container-fluid mt-md-3 mb-md-3 ">
-  <div class="row">
-    <div class="col-md-12">
+ <div class="col-md-12 mt-2">
         <table class="table table-bordered mt-lg-2 text-center">
           <thead>
           <tr class="bg-title-table">
@@ -34,13 +32,10 @@
           </tbody>
         </table>
 
-        <div class="container-fluid  ">
+
           <div class="row ">
             <div class="col-xs-12 col-sm-6 col-md-3">
-
-
             </div>
-
             <div class="col-xs-12 col-sm-2 col-md-2">
               <button [routerLink]="['/add-question']" data-toggle="collapse" type="button"
                       class="btn bg-btn btn-primary mb-3">Add
@@ -64,8 +59,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
+
+
+
 
 
