--- a/project/FE/src/app/question/add-question/add-question.component.html
+++ b/project/FE/src/app/question/add-question/add-question.component.html
@@ -13,9 +13,9 @@
         </div>
         <!--error line-->
         <div class="list-inline text-danger" *ngIf="error !== ''">* {{error}}</div>
-        <div class="list-inline text-danger"
-             *ngIf="formQuestion.get('questionId').hasError('required') && formQuestion.get('questionId').touched">*
-          Enter Question Code please
+        <div class="list-inline mt-2 ml-5  text-danger"
+             *ngIf="formQuestion.get('questionId').hasError('required') && formQuestion.get('questionId').touched">
+          * Enter Question Code please!
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
         <!--error line-->
         <div class="list-inline mt-2 ml-5 text-danger"
              *ngIf="formQuestion.get('question').hasError('required') && formQuestion.get('question').touched">* Enter
-          Question please
+          Question please!
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
         <!--error line-->
         <div class="list-inline mt-2 ml-5 text-danger"
             *ngIf="formQuestion.get('subjectId').hasError('required') && formQuestion.get('subjectId').touched">*
-          Enter subject please
+          Enter subject please!
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
         <!--error line-->
         <div class="list-inline mt-2 ml-5 text-danger"
             *ngIf="formQuestion.get('testCodeList').hasError('required') && formQuestion.get('testCodeList').touched">
-          * Enter test please
+          * Enter test please!
         </div>
       </div>
     </div>
