--- a/project/FE/src/app/question/update-question/update-question.component.html
+++ b/project/FE/src/app/question/update-question/update-question.component.html
@@ -14,7 +14,7 @@
         <!--error line-->
         <div class="list-inline text-danger"
              *ngIf="formQuestion.get('questionId').hasError('required') && formQuestion.get('questionId').touched">*
-          Enter Question Code please
+          Enter Question Code please!
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
         <!--error line-->
         <div class="list-inline mt-2 ml-5 text-danger"
              *ngIf="formQuestion.get('question').hasError('required') && formQuestion.get('question').touched">* Enter
-          Question please
+          Question please!
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
         <!--error line-->
         <div class="list-inline mt-2 ml-5 text-danger"
              *ngIf="formQuestion.get('subjectId').hasError('required') && formQuestion.get('subjectId').touched">*
-          Enter subject please
+          Enter subject please!
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
         <!--error line-->
         <div class="list-inline mt-2 ml-5 text-danger"
              *ngIf="formQuestion.get('testCodeList').hasError('required') && formQuestion.get('testCodeList').touched">
-          * Enter test please
+          * Enter test please!
         </div>
       </div>
     </div>
