--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -67,6 +67,6 @@
     </tbody>
   </table>
   <div>
-    <button class="btn btn-outline-info  rounded"><a href="">Other test </a></button>
+    <button routerLink="" class="btn btn-outline-info  rounded"><a href="">Other test </a></button>
   </div>
 </div>
