--- a/project/FE/src/app/list/list.component.html
+++ b/project/FE/src/app/list/list.component.html
@@ -19,15 +19,15 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a (click)="menuChange('Member List')" class="dropdown-item" routerLink="user">Member List</a>
-            <a (click)="menuChange('Exam List')" class="dropdown-item" routerLink="test">Exam List</a>
+            <a (click)="menuChange('Test List')" class="dropdown-item" routerLink="test">Test List</a>
             <a (click)="menuChange('Questions Bank')" class="dropdown-item" routerLink="question">Questions Bank</a>
             <a (click)="menuChange('Top Grade')" class="dropdown-item" href="#">Top Grade</a>
           </div>
         </div>
-        <div class="row card-body justify-content-center">
+      </div>
+        <div class="col-sm-12 card-body justify-content-center">
         <router-outlet></router-outlet>
         </div>
-      </div>
     </div>
   </div>
 </div>
