--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -74,7 +74,9 @@
       </div>
     </div>
   </div>
+  <div class="col-sm-12 justify-content-end d-flex">
   <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
   <div class="col-md-12 d-flex justify-content-md-end mb-3">
     <button id="closeButton" class="btn btn-outline-secondary align-self-end">
       Close
