--- a/project/FE/src/app/exam/pick-test/pick-test.component.html
+++ b/project/FE/src/app/exam/pick-test/pick-test.component.html
@@ -7,19 +7,18 @@
       <th scope="col">NameTest</th>
       <th scope="col">Subject</th>
       <th scope="col">Grade</th>
-      <th scope="col">Delete</th>
-      <th scope="col">View</th>
+      <th scope="col">Action</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let test of listTest | paginate: {itemsPerPage: 5, currentPage: p}; let i = index">
-      <th scope="col">{{test.testId}}</th>
+      <th scope="col">{{i+1}}</th>
       <td>{{test.testCode}}</td>
       <td>{{test.testName}}</td>
       <td>{{test.subjectName}}</td>
       <td>{{test.grade}}</td>
       <td>
-        <a [routerLink]="['']" class="text-decoration-none">View</a>
+        <a [routerLink]="['/getTestById/' + test.testId]" class="text-decoration-none">Pick</a>
       </td>
     </tr>
     </tbody>
