--- a/project/FE/src/app/list/list.component.html
+++ b/project/FE/src/app/list/list.component.html
@@ -12,8 +12,7 @@
           <p class="m-0">List Name:</p>
         </div>
         <div class="dropdown col-md-2 align-self-center">
-          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button"
-             id="dropdownMenuLink"
+          <a id="dropDown" class="btn btn-outline-secondary dropdown-toggle" href="#" role="button"
              data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
             {{dropdownSelected}}
           </a>
