--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -89,7 +89,7 @@
             </label>
           </div>
           <button type="submit" class="btn rounded mr-3 mt-3" [disabled]="loginForm.invalid">Sign in</button>
-          <button routerLink="/user-register" class="btn rounded mt-3">Register</button>
+          <button routerLink="user-register" class="btn rounded mt-3">Register</button>
           <div *ngIf="loginForm.dirty && isLogInFailed" class="alert alert-danger p-1 mt-2">
             Account doesn't exist !
           </div>
