--- a/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
+++ b/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
@@ -38,14 +38,14 @@
             </div>
             <div class="col-xs-12 col-sm-2 col-md-2">
               <button [routerLink]="['/add-question']" data-toggle="collapse" type="button"
-                      class="btn bg-btn btn-primary mb-3">Add
+                      class="button-inform btn bg-btn mb-3">Add
               </button>
 
             </div>
 
             <div class="col-xs-12 col-sm-2 col-md-2">
               <button type="button" data-toggle="collapse"
-                      class="btn bg-btn btn-primary mb-3" (click)="close()">Close
+                      class="button-inform btn bg-btn mb-3" (click)="close()">Close
               </button>
 
             </div>
