--- a/project/FE/src/app/test/test-list/test-list.component.html
+++ b/project/FE/src/app/test/test-list/test-list.component.html
@@ -61,8 +61,8 @@
           Delete
         </button>
       </div>
-      <div class="col-md-2 col-sm-6">
-        <a [routerLink]="['../addTest']"
+      <div  class="col-md-2 col-sm-6">
+        <a id="addNew" [routerLink]="['../addTest']"
            class="btn btn-outline-info">
           Add new
         </a>
