--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <a class="flex-md-fill text-md-center nav-link" routerLink="''">
+      <a class="flex-md-fill text-md-center nav-link" routerLink="">
         <i class="fa fa-home" aria-hidden="true"></i> Home
       </a>
       <a class="flex-md-fill text-md-center nav-link" (click)="scroll('gradeA')">
