--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -78,7 +78,7 @@
   <pagination-controls (pageChange)="p = $event"></pagination-controls>
   </div>
   <div class="col-md-12 d-flex justify-content-md-end mb-3">
-    <button id="closeButton" class="btn btn-outline-secondary align-self-end">
+    <button id="closeButton" routerLink="" class="btn btn-outline-secondary align-self-end">
       Close
     </button>
   </div>
