--- a/project/FE/src/app/user/register-user/register-user.component.html
+++ b/project/FE/src/app/user/register-user/register-user.component.html
@@ -109,13 +109,12 @@
             </div>
           </div>
           <div class="form-group row justify-content-center">
-            <label class="col-sm-1 col-form-label"></label>
-            <div class="col-sm-6">
-              <button id="closeButton" class="btn btn-outline-secondary">
+            <div class="col-sm-6 d-flex justify-content-center">
+              <button id="closeButton" class="btn btn-outline-secondary mr-1">
                 Close
               </button>
-              <button type="submit" class="btn btn-outline-secondary">
-                Submit
+              <button type="submit" class="btn btn-outline-secondary ml-1">
+                Register
               </button>
             </div>
           </div>
