update fire base completed

--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -13,6 +13,7 @@
         <div class="card">
           <div class="card-body p-2">User:
             <div class="username-card">{{ username }} | ({{ roles }})</div>
+<!--            {{avatar}}-->
             <img src="{{ avatar }}" class="my-3 rounded shadow avt" alt="avatar.jpg">
           </div>
         </div>
