Thien - Update default page

--- a/project/FE/src/app/default-page/default-page.component.html
+++ b/project/FE/src/app/default-page/default-page.component.html
@@ -1,89 +1,114 @@
 <!--Grade A-->
-<div id="gradeA" class="row d-flex justify-content-md-around mt-3 mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/math%20image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Math</p>
-    </div>
+<h4>
+  <i class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
+  Grade A Subjects List
+</h4>
+<hr>
+<div id="gradeA" class="row d-flex justify-content-md-around mb-5">
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/math">
+      <img class="card-img-top" src="assets/image/math-image.jpg">
+      <div class="card-body subject-title">
+        <p class="text-center card-title m-3">Math</p>
+      </div>
+    </a>
   </div>
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/physics-image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Physics</p>
-    </div>
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/physics">
+      <img class="card-img-top" src="assets/image/physics-image.jpg">
+      <div class="card-body">
+        <p class="text-center subject-title m-3">Physics</p>
+      </div>
+    </a>
   </div>
-</div>
-<div class="row d-flex justify-content-md-around mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/chemistry_2018_640.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Chemistry</p>
-    </div>
-  </div>
-</div>
-<!--Grade B-->
-<div id="gradeB" class="row d-flex justify-content-md-around mt-3 mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/math%20image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Math</p>
-    </div>
-  </div>
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/biology-image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Biology</p>
-    </div>
-  </div>
-</div>
-<div class="row d-flex justify-content-md-around mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/chemistry_2018_640.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Chemistry</p>
-    </div>
-  </div>
-</div>
-<!--Grade D-->
-<div id="gradeD" class="row d-flex justify-content-md-around mt-3 mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/math%20image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Math</p>
-    </div>
-  </div>
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/english-image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">English</p>
-    </div>
-  </div>
-</div>
-<div class="row d-flex justify-content-md-around mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/literature-image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">Literature</p>
-    </div>
-  </div>
-</div>
-<!--IQ-->
-<div id="iqTest" class="row d-flex justify-content-md-around mb-5">
-  <div class="card col-md-5 item-subject p-0">
-    <img class="card-img-top"
-         src="assets/image/iq-image.jpg">
-    <div class="card-body">
-      <p class="text-center card-title m-3">IQ Test</p>
-    </div>
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/chemistry">
+      <img class="card-img-top" src="assets/image/chemistry_2018_640.jpg">
+      <div class="card-body">
+        <p class="text-center subject-title m-3">Chemistry</p>
+      </div>
+    </a>
   </div>
 </div>
 
+<!--Grade B-->
+<h4>
+  <i class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
+  Grade B Subjects List
+</h4>
+<hr>
+<div id="gradeB" class="row d-flex justify-content-md-around mb-5">
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/math">
+      <img class="card-img-top" src="assets/image/math-image.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">Math</p>
+      </div>
+    </a>
+  </div>
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/biology">
+      <img class="card-img-top" src="assets/image/biology-image.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">Biology</p>
+      </div>
+    </a>
+  </div>
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/chemistry">
+      <img class="card-img-top" src="assets/image/chemistry_2018_640.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">Chemistry</p>
+      </div>
+    </a>
+  </div>
+</div>
+
+
+<!--Grade D-->
+<h4>
+  <i class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
+  Grade D Subjects List
+</h4>
+<hr>
+<div id="gradeD" class="row d-flex justify-content-md-around mb-5">
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/math">
+      <img class="card-img-top" src="assets/image/math-image.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">Math</p>
+      </div>
+    </a>
+  </div>
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/english">
+      <img class="card-img-top" src="assets/image/english-image.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">English</p>
+      </div>
+    </a>
+  </div>
+  <div class="card col-md-3 item-subject p-0">
+    <a routerLink="test-list/literature">
+      <img class="card-img-top" src="assets/image/literature-image.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">Literature</p>
+      </div>
+    </a>
+  </div>
+</div>
+
+<!--IQ-->
+<h4>Grade IQ List</h4>
+<hr>
+<div id="iqTest" class="row d-flex justify-content-md-start mb-5 ">
+
+  <div class="card col-md-3 item-subject p-0 cus">
+    <a routerLink="test-list/iqtest">
+      <img class="card-img-top" src="assets/image/iq-image.jpg">
+      <div class="card-body">
+        <p class="text-center card-title m-3">IQ Test</p>
+      </div>
+    </a>
+  </div>
+</div>
