--- a/project/FE/src/app/default-page/default-page.component.html
+++ b/project/FE/src/app/default-page/default-page.component.html
@@ -6,7 +6,7 @@
 <hr>
 <div id="gradeA" class="row d-flex justify-content-md-around mb-5">
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/math">
+    <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
       <div class="card-body subject-title">
         <p class="text-center card-title m-3">Math</p>
@@ -14,7 +14,7 @@
     </a>
   </div>
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/physics">
+    <a routerLink="test-list/Physics">
       <img class="card-img-top" src="assets/image/physics-image.jpg">
       <div class="card-body">
         <p class="text-center subject-title m-3">Physics</p>
@@ -22,7 +22,7 @@
     </a>
   </div>
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/chemistry">
+    <a routerLink="test-list/Chemistry">
       <img class="card-img-top" src="assets/image/chemistry_2018_640.jpg">
       <div class="card-body">
         <p class="text-center subject-title m-3">Chemistry</p>
@@ -39,7 +39,7 @@
 <hr>
 <div id="gradeB" class="row d-flex justify-content-md-around mb-5">
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/math">
+    <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">Math</p>
@@ -47,7 +47,7 @@
     </a>
   </div>
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/biology">
+    <a routerLink="test-list/Biology">
       <img class="card-img-top" src="assets/image/biology-image.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">Biology</p>
@@ -55,7 +55,7 @@
     </a>
   </div>
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/chemistry">
+    <a routerLink="test-list/Chemistry">
       <img class="card-img-top" src="assets/image/chemistry_2018_640.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">Chemistry</p>
@@ -73,7 +73,7 @@
 <hr>
 <div id="gradeD" class="row d-flex justify-content-md-around mb-5">
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/math">
+    <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">Math</p>
@@ -81,7 +81,7 @@
     </a>
   </div>
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/english">
+    <a routerLink="test-list/English">
       <img class="card-img-top" src="assets/image/english-image.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">English</p>
@@ -89,7 +89,7 @@
     </a>
   </div>
   <div class="card col-md-3 item-subject p-0">
-    <a routerLink="test-list/literature">
+    <a routerLink="test-list/Literature">
       <img class="card-img-top" src="assets/image/literature-image.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">Literature</p>
@@ -104,7 +104,7 @@
 <div id="iqTest" class="row d-flex justify-content-md-start mb-5 ">
 
   <div class="card col-md-3 item-subject p-0 cus">
-    <a routerLink="test-list/iqtest">
+    <a routerLink="test-list/IQ">
       <img class="card-img-top" src="assets/image/iq-image.jpg">
       <div class="card-body">
         <p class="text-center card-title m-3">IQ Test</p>
