--- a/project/FE/src/app/test/test-list/test-list.component.html
+++ b/project/FE/src/app/test/test-list/test-list.component.html
@@ -28,7 +28,7 @@
           </label>
         </td>
         <td>
-          <a [routerLink]="['']" class="text-decoration-none">View</a>
+          <a (click)="goView(test.testId)" class="text-decoration-none">View</a>
         </td>
       </tr>
       </tbody>
@@ -62,13 +62,13 @@
         </button>
       </div>
       <div  class="col-md-2 col-sm-6">
-        <a id="addNew" [routerLink]="['../addTest']"
+        <a id="addNew" [routerLink]="['addTest']"
            class="btn btn-outline-info">
           Add new
         </a>
       </div>
       <div class="col-md-2 col-sm-6">
-        <button class="btn btn-outline-info">
+        <button [routerLink]="['../../../']" class="btn btn-outline-info">
           <i class="fa fa-times" aria-hidden="true"></i>
           Close
         </button>
