--- a/project/FE/src/app/default-page/default-page.component.html
+++ b/project/FE/src/app/default-page/default-page.component.html
@@ -1,10 +1,10 @@
 <!--Grade A-->
 <h4>
-  <i class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
+  <i id="gradeA" class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
   Grade A Subjects List
 </h4>
 <hr>
-<div id="gradeA" class="row d-flex justify-content-md-around mb-5">
+<div class="row d-flex justify-content-md-around mb-5">
   <div class="card col-md-3 item-subject p-0">
     <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
@@ -32,12 +32,12 @@
 </div>
 
 <!--Grade B-->
-<h4>
-  <i class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
+<h4 >
+  <i id="gradeB" class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
   Grade B Subjects List
 </h4>
 <hr>
-<div id="gradeB" class="row d-flex justify-content-md-around mb-5">
+<div  class="row d-flex justify-content-md-around mb-5">
   <div class="card col-md-3 item-subject p-0">
     <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
@@ -66,12 +66,12 @@
 
 
 <!--Grade D-->
-<h4>
+<h4 id="gradeD">
   <i class="fa fa-graduation-cap text-info" aria-hidden="true"></i>
   Grade D Subjects List
 </h4>
 <hr>
-<div id="gradeD" class="row d-flex justify-content-md-around mb-5">
+<div  class="row d-flex justify-content-md-around mb-5">
   <div class="card col-md-3 item-subject p-0">
     <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
@@ -99,9 +99,9 @@
 </div>
 
 <!--IQ-->
-<h4>Grade IQ List</h4>
+<h4 id="iqTest">IQ Test List</h4>
 <hr>
-<div id="iqTest" class="row d-flex justify-content-md-start mb-5 ">
+<div class="row d-flex justify-content-md-start mb-5 ">
 
   <div class="card col-md-3 item-subject p-0 cus">
     <a routerLink="test-list/IQ">
