Thien - change font-size

--- a/project/FE/src/app/default-page/default-page.component.html
+++ b/project/FE/src/app/default-page/default-page.component.html
@@ -8,8 +8,8 @@
   <div class="card col-md-3 item-subject p-0">
     <a routerLink="test-list/Math">
       <img class="card-img-top" src="assets/image/math-image.jpg">
-      <div class="card-body subject-title">
-        <p class="text-center card-title m-3">Math</p>
+      <div class="card-body ">
+        <p class="text-center subject-title m-3">Math</p>
       </div>
     </a>
   </div>
