--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -1,5 +1,4 @@
-<div class="col-md-12 mt-2">
-  <table class="table table-bordered text-center">
+ <table class="table table-bordered text-center">
     <thead class="thead">
     <tr class="bg-title-table">
       <th scope="col">No</th>
@@ -77,9 +76,9 @@
   <div class="col-sm-12 justify-content-end d-flex">
   <pagination-controls (pageChange)="p = $event"></pagination-controls>
   </div>
-  <div class="col-md-12 d-flex justify-content-md-end mb-3">
+  <div class="col-md-12 d-flex justify-content-md-end">
     <button id="closeButton" routerLink="" class="btn btn-outline-secondary align-self-end">
       Close
     </button>
   </div>
-</div>
+
