--- a/project/FE/src/app/list/list.component.html
+++ b/project/FE/src/app/list/list.component.html
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-        <div class="col-sm-12 card-body justify-content-center">
+        <div class="col-sm-12 card-body justify-content-center mb-2 p-0">
         <router-outlet></router-outlet>
         </div>
     </div>
