khanh fix message and router link

--- a/project/FE/src/app/test/add-test/add-test.component.html
+++ b/project/FE/src/app/test/add-test/add-test.component.html
@@ -57,7 +57,11 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3"></div>
+          <div class="col-md-3 mb-4 mt-4">
+            <span class="col-md-11 d-flex justify-content-center">
+              <input [routerLink]="['/list/test']" class="btn btn-outline-light text-info" type="submit" value=">> List test">
+            </span>
+          </div>
           <!--          nút submit-->
           <div class="col-md-2 mb-4 mt-4">
           <span class="col-md-11 d-flex justify-content-center">
